@@ -1,11 +1,11 @@
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-libdir=@libdir@
-includedir=@includedir@
+prefix=@CMAKE_INSTALL_PREFIX@
+exec_prefix=${prefix}
+libdir=${exec_prefix}/lib
+includedir=${prefix}/include
 
 Name: WebKit-EFL
 Description: Web content engine for EFL applications
-Version: @VERSION@
+Version: @PROJECT_VERSION@
 Requires: cairo evas ecore
-Libs: -L${libdir} -lewebkit
+Libs: -L${libdir} -lewebkit @EXTRA_EWEBKIT_LINK@
 Cflags: -I${includedir}/EWebKit
